<resources>
    <string name="app_name">QuizProject</string>
    <string name="fiftyButton">50/50</string>
    <string name="viewCorrectAnswersButton">View Answers</string>
    <string name="cancelButton">Cancel</string>
    <string name="viewAnswerActivityTitle">Here are the Answers</string>
    <string name="nextButton">Next</string>
    <string name="question">Question</string>
    <string name="question_no">Question Number</string>
    <string name="viewAnswerButton">Show Answer</string>
    <string name="startButton">Start</string>
    <string name="enterName">Enter Your Name</string>
    <string name="country">Country</string>
    <string name="finalActivityTitle">Results</string>
    <string name="startNewGameButton">Start New Game</string>
    <string name="viewScoresButoon">View Scores</string>
    <string name="usernameInput">Enter Your Name</string>
    <string name="welcome_text">Please choose a language to start a new game</string>
    <string name="facebook_app_id">141731266359727</string>
    <string name="username">Username</string>
    <string name="score">Score</string>
    <string name="language">Language</string>
    <string name="share_facebook">Share</string>

</resources>
