<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvNoOfQuestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/question_no"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/question"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/optionARadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="@android:color/holo_green_light"
            android:tag="1"
            android:text="RadioButton"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:textColorHighlight="@android:color/holo_green_light" />

        <RadioButton
            android:id="@+id/optionBRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="2"
            android:text="RadioButton"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/optionCRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="3"
            android:text="RadioButton"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/optionDRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="4"
            android:text="RadioButton"
            android:textSize="16sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:orientation="vertical"
        android:layout_weight="0.40">

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nextButton" />

        <Button
            android:id="@+id/fiftyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fiftyButton" />

        <Button
            android:id="@+id/showAnswerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/viewAnswerButton" />

        <TextView
            android:id="@+id/textViewAnsweredShown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

    </LinearLayout>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/cancelButton"
        android:visibility="visible" />

</LinearLayout>